# ntd-model-runner

./: .gitignore  README.md  check-progress.bash  db.py  gcs.py  import-groups.py  import-ius.py  ntd.sql  ntd_model_runner.py  results.sql  run-sch-mansoni-scenarios-using-3b-iu-file.bash  run-sch-mansoni-scenarios-zanzibar.bash  run-sch-scenario-1-3b.bash  run-sth-ascaris-scenarios.bash  run-sth-hookworm-scenarios.bash  run-sth-trichuris-scenarios.bash  run.py  setup.py  test-runs-ascaris.bash  test-runs-hookworm-8-core-a.bash  test-runs-hookworm-8-core-c.bash  test-runs-hookworm-8-core-d.bash  test-runs-hookworm.bash  test-runs-mansoni.bash  test-runs-whipworm.bash
sch-sth-tra/: README.md  b64.py  compute-averages-from-outputs.bash  convert-sth-pickle-data.py  convert-sth-pickle-data.sh  db.py  db_mysql.py  db_pgsql.py  find_run.py  gcs.py  generate-rwanda-iu-lists-for-colon-separated-diseases.bash  import-extra-ius-for-disease.py  import-groups.py  import-ius.py  import-runs-lf-sch-sth-tra.py  kick-off-multi-scenario-runs-rwanda-202307.bash  model_info.py  ntd-endgame-result-data-listings.txt.bz2  ntd_model_runner.py  pyproject.toml  run-sch-mansoni-scenarios-0-1-2-3a-3b.bash  run-sch-sth-tra.bash  run.py  run_epioncho.py  run_trachoma.py  setup-gcs-service-account  setup.py
sch-sth-tra/iu-disease-data/: epionchoIUs_scenario0_10_random_IUs.csv  hookwormIUs_test-20240502.csv  iu-list-AGO02049.csv  ius-with-disease-data.tbz  mansoni-burnt-in-IUs.csv  mansoniIUs-groups-64-68.csv  mansoniIUs-missed-20230324.csv  mansoniIUs_burn_in_full_20230324.csv  onc-Epioncho-Onc.txt  (+22 more)
(+308 files in other folders)
