[project]
name = "ntd_model_runner"
version = "0.0.1"
description = "SCH/STH/Trachoma simulation model runner"
authors = [
    { name = "ArtRabbit", email = "support@artrabbit.com" }
]
requires-python = ">=3.10.9"
dependencies = [
    'toml',
    'fsspec',
    'gcsfs==2022.7.1',
    'google-cloud-storage',
    'psycopg2-binary',
    'dotted-dict',
    'python-slugify',
    'sch_simulation @ git+https://github.com/ntd-modelling-consortium/ntd-model-sch.git@Endgame_v2',
    'trachoma @ git+https://github.com/ntd-modelling-consortium/ntd-model-trachoma.git@add_vaccination_dev_solve_issues',
]
[tool.setuptools.packages.find]
include = []
exclude = [ 'data', 'results', 'iu-disease-data' ]
